<resources>
    <string name="app_name">TradeFree</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="google">Google</string>
    <string name="register">Regístrate</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellido Paterno</string>
    <string name="retype_password">Confirmar contraseña</string>
    <string name="create_account">Crear Cuenta</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="profile">Perfil</string>
    <string name="loading">Cargando</string>
    <string name="add_product">Agregar Producto</string>
    <string name="add_product_description">Descripción</string>
    <string name="product_name">Nombre del producto</string>
    <string name="see_more">Ver más</string>
    <string name="profile_seller">Perfil Vendedor</string>
    <string name="Delete">Eliminar</string>
</resources>
