<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.synnapps.carouselview.CarouselView
                android:id="@+id/carouselViewHome"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="1"
                app:fillColor="#FFFFFFFF"
                app:pageColor="#00000000"
                app:radius="6dp"
                app:slideInterval="3000"
                app:strokeColor="#FF777777"
                app:strokeWidth="1dp">


            </com.synnapps.carouselview.CarouselView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/txtTitleHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtNameSeller"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnContactSeller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_more"
                    android:theme="@style/PrimaryFlatButton"/>

                <Button
                    android:id="@+id/btnProfileSeller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_seller"
                    android:theme="@style/PrimaryFlatButton"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/btnDeleteProduct"
                    android:layout_width="104dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Delete"
                    android:theme="@style/ErrorFlatButton"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>
